[gd_scene load_steps=24 format=3 uid="uid://xfc7ponoyqm"]

[ext_resource type="PackedScene" uid="uid://clt2howwt3sbi" path="res://Scenes/player_char.tscn" id="1_ljels"]
[ext_resource type="Script" path="res://Scenes/Level1/SignTest.gd" id="2_f8i16"]
[ext_resource type="PackedScene" uid="uid://b6xo1g7jwp15i" path="res://Tools/3d_text/3d_text.tscn" id="3_sur7t"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_eafgo"]
sky_top_color = Color(0.364706, 0.584314, 0.823529, 1)
sky_horizon_color = Color(0.641176, 0.688328, 0.739132, 1)
ground_horizon_color = Color(0.641176, 0.688328, 0.739132, 1)

[sub_resource type="Sky" id="Sky_yc16i"]
sky_material = SubResource("ProceduralSkyMaterial_eafgo")

[sub_resource type="Environment" id="Environment_3or8q"]
background_mode = 2
sky = SubResource("Sky_yc16i")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_bxgko"]
size = Vector3(10, 0.5, 2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_gpha1"]
data = PackedVector3Array(-5, 0.25, 1, 5, 0.25, 1, -5, -0.25, 1, 5, 0.25, 1, 5, -0.25, 1, -5, -0.25, 1, 5, 0.25, -1, -5, 0.25, -1, 5, -0.25, -1, -5, 0.25, -1, -5, -0.25, -1, 5, -0.25, -1, 5, 0.25, 1, 5, 0.25, -1, 5, -0.25, 1, 5, 0.25, -1, 5, -0.25, -1, 5, -0.25, 1, -5, 0.25, -1, -5, 0.25, 1, -5, -0.25, -1, -5, 0.25, 1, -5, -0.25, 1, -5, -0.25, -1, 5, 0.25, 1, -5, 0.25, 1, 5, 0.25, -1, -5, 0.25, 1, -5, 0.25, -1, 5, 0.25, -1, -5, -0.25, 1, 5, -0.25, 1, -5, -0.25, -1, 5, -0.25, 1, 5, -0.25, -1, -5, -0.25, -1)

[sub_resource type="PlaneMesh" id="PlaneMesh_ni4pq"]
size = Vector2(10, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_foebc"]
data = PackedVector3Array(5, 0, 5, -5, 0, 5, 5, 0, -5, -5, 0, 5, -5, 0, -5, 5, 0, -5)

[sub_resource type="PlaneMesh" id="PlaneMesh_ao6wx"]
size = Vector2(10, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_whk8e"]
data = PackedVector3Array(5, 0, 5, -5, 0, 5, 5, 0, -5, -5, 0, 5, -5, 0, -5, 5, 0, -5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_olyv0"]
albedo_color = Color(0.541176, 0.27451, 0.160784, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jw4ns"]
material = SubResource("StandardMaterial3D_olyv0")
size = Vector3(0.25, 1.5, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kdb44"]
albedo_color = Color(0.698039, 0.372549, 0.231373, 1)

[sub_resource type="BoxMesh" id="BoxMesh_vj1gb"]
material = SubResource("StandardMaterial3D_kdb44")
size = Vector3(1.925, 1.435, 0.3)

[sub_resource type="SphereShape3D" id="SphereShape3D_s0a7t"]
radius = 1.69749

[sub_resource type="ViewportTexture" id="ViewportTexture_7bteg"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a54ih"]
albedo_color = Color(0.407843, 0.678431, 0.917647, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_xaiuy"]
material = SubResource("StandardMaterial3D_a54ih")
top_radius = 0.405
bottom_radius = 0.385
height = 0.13

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xxrmr"]
albedo_color = Color(0.407843, 0.678431, 0.917647, 1)

[sub_resource type="PrismMesh" id="PrismMesh_jus38"]
material = SubResource("StandardMaterial3D_xxrmr")
size = Vector3(0.5, 0.15, 0.15)

[sub_resource type="CylinderMesh" id="CylinderMesh_f7man"]
top_radius = 0.085
bottom_radius = 0.085
height = 0.05

[node name="Level1" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3or8q")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.218143, 0.975917, 0, -0.975917, 0.218143, 0, 0, 0)
shadow_enabled = true

[node name="PlayerChar" parent="." instance=ExtResource("1_ljels")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.271, 0)

[node name="Area1" type="Node3D" parent="."]

[node name="Section1" type="Node3D" parent="Area1"]

[node name="Floor" type="MeshInstance3D" parent="Area1/Section1"]
mesh = SubResource("BoxMesh_bxgko")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Area1/Section1/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area1/Section1/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_gpha1")

[node name="Back Wall" type="MeshInstance3D" parent="Area1/Section1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.1598, -0.989042)
mesh = SubResource("PlaneMesh_ni4pq")

[node name="StaticBody3D" type="StaticBody3D" parent="Area1/Section1/Back Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area1/Section1/Back Wall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_foebc")

[node name="Front Wall" type="MeshInstance3D" parent="Area1/Section1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.07289, 0.998901)
mesh = SubResource("PlaneMesh_ao6wx")
skeleton = NodePath("../Back Wall")

[node name="StaticBody3D" type="StaticBody3D" parent="Area1/Section1/Front Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area1/Section1/Front Wall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_whk8e")

[node name="Section2" type="Node3D" parent="Area1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.99328, 0, 0)

[node name="Floor" type="MeshInstance3D" parent="Area1/Section2"]
mesh = SubResource("BoxMesh_bxgko")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Area1/Section2/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area1/Section2/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_gpha1")

[node name="Back Wall" type="MeshInstance3D" parent="Area1/Section2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.1598, -0.989042)
mesh = SubResource("PlaneMesh_ni4pq")

[node name="StaticBody3D" type="StaticBody3D" parent="Area1/Section2/Back Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area1/Section2/Back Wall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_foebc")

[node name="Front Wall" type="MeshInstance3D" parent="Area1/Section2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.07289, 0.998901)
mesh = SubResource("PlaneMesh_ao6wx")
skeleton = NodePath("../Back Wall")

[node name="StaticBody3D" type="StaticBody3D" parent="Area1/Section2/Front Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area1/Section2/Front Wall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_whk8e")

[node name="SignTest" type="Node3D" parent="Area1/Section2"]
script = ExtResource("2_f8i16")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area1/Section2/SignTest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.991754, -0.548934)
mesh = SubResource("BoxMesh_jw4ns")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Area1/Section2/SignTest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.89272, -0.544172)
mesh = SubResource("BoxMesh_vj1gb")

[node name="Area3DSIgnTest" type="Area3D" parent="Area1/Section2/SignTest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.96049, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area1/Section2/SignTest/Area3DSIgnTest"]
shape = SubResource("SphereShape3D_s0a7t")

[node name="3dText" parent="Area1/Section2/SignTest" instance=ExtResource("3_sur7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.72716, -0.363712)
texture = SubResource("ViewportTexture_7bteg")
text_file_location = "res://Scenes/Level1/TextFiles/Sign1.txt"

[node name="Thingy" type="MeshInstance3D" parent="Area1/Section2/SignTest"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.23534, -0.473662)
mesh = SubResource("CylinderMesh_xaiuy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area1/Section2/SignTest/Thingy"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.98023e-08, -0.36866)
mesh = SubResource("PrismMesh_jus38")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Area1/Section2/SignTest/Thingy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0578237, 0)
mesh = SubResource("CylinderMesh_f7man")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Area1/Section2/SignTest/Thingy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.226517, -0.0569571, 0)
mesh = SubResource("CylinderMesh_f7man")
skeleton = NodePath("../MeshInstance3D2")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Area1/Section2/SignTest/Thingy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.220832, -0.0578237, 0)
mesh = SubResource("CylinderMesh_f7man")

[connection signal="body_entered" from="Area1/Section2/SignTest/Area3DSIgnTest" to="Area1/Section2/SignTest" method="_on_area_3ds_ign_test_body_entered"]
[connection signal="body_exited" from="Area1/Section2/SignTest/Area3DSIgnTest" to="Area1/Section2/SignTest" method="_on_area_3ds_ign_test_body_exited"]
